[package]
authors = ["nasa <htilcs1115@gmail.com>"]
edition = "2018"
name = "contriview"
description = "contriview"
repository = "https://github.com/k-nasa/contriview"
license-file = "LICENSE"
version = "0.2.0"

[dependencies]
chrono = "0.4.11"
clap = "2.33.0"
failure = "0.1.7"
reqwest = { version = "0.10.4", features = ["blocking"] }
scraper = "0.11.0"
