[package]
authors = ["nasa <htilcs1115@gmail.com>"]
edition = "2018"
name = "contriview"
description = "contriview"
repository = "https://github.com/k-nasa/contriview"
license-file = "LICENSE"
version = "0.2.1"

[dependencies]
chrono = "0.4.19"
clap = "3.2.10"
failure = "0.1.8"
reqwest = { version = "0.11.10", features = ["blocking"] }
scraper = "0.13.0"
